--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
   <div class="profile">
-    <img src="https://via.placeholder.com/120" alt="Profile Image" />
+    <img src="https://i.postimg.cc/gJh8dGC1/IMG-1302.jpg" alt="Profile Image" />
     <div class="username">@OmarHadraa</div>
     <div class="bio">Sharing tech & life — stay connected</div>
 
