--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
   <a class="link-button" href="https://t.me/yourtelegram" target="_blank">Telegram</a>
   <a class="link-button" href="https://snapchat.com/t/nZz5E7VE" target="_blank">Snapchat</a>
   <a class="link-button" href="mailto:omarhadraa@gmail.com" target="_blank">Email Me</a>
-
+href="https://x.com/omerhadraa?s=21" target="_blank">TikTok</a>
+  <a class="link-button"
   <div class="footer">
     © 2025 Omar Hadraa
   </div>
