--- a/index.html
+++ b/index.html
@@ -97,9 +97,15 @@
   <a class="link-button" href="https://t.me/yourtelegram" target="_blank">Telegram</a>
   <a class="link-button" href="https://snapchat.com/t/nZz5E7VE" target="_blank">Snapchat</a>
   <a class="link-button" href="mailto:omarhadraa@gmail.com" target="_blank">Email Me</a>
-href="https://x.com/omerhadraa?s=21" target="_blank">TikTok</a>
+  <a class="link-button" href="https://www.tiktok.com/@omarhadraa?_t=ZM-8xCRwwwzyhq&_r=1" target="_blank">TikTok</a>
   <a class="link-button"
-  <div class="footer">
+  <div class="about-me">
+  <h2>About Me</h2>
+  <p>
+    I'm Omar Hadraa, a passionate Software Engineering graduate. I specialize in web development and digital creativity, and I'm always exploring new technologies to improve my skills and bring ideas to life.
+  </p>
+</div>
+    <div class="footer">
     © 2025 Omar Hadraa
   </div>
 
