--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
   <a class="link-button" href="mailto:omarhadraa@gmail.com" target="_blank">Email Me</a>
   <a class="link-button" href="https://www.tiktok.com/@omarhadraa?_t=ZM-8xCRwwwzyhq&_r=1" target="_blank">TikTok</a>
   <a class="link-button"
-  <div class="about-me">
-  <h2>About Me</h2>
-  <p>
+<div style="margin: 60px 20px; text-align: center;">
+  <h2 style="font-size: 24px; margin-bottom: 10px; color: white;">About Me</h2>
+  <p style="max-width: 600px; margin: auto; font-size: 16px; line-height: 1.8; color: #ccc;">
     I'm Omar Hadraa, a passionate Software Engineering graduate. I specialize in web development and digital creativity, and I'm always exploring new technologies to improve my skills and bring ideas to life.
   </p>
 </div>
